# DeviceMonitor

./: CMakeLists.txt  README.md
config/: dm.cnf
include/: DeviceMonitor.h  InfoCollector.h  MQTTAsyncClient.h  Network.h
lib/: libpaho-mqtt3a.so.1  libpaho-mqtt3a.so.1.3.6  libpaho-mqtt3c.so.1  libpaho-mqtt3c.so.1.3.6
src/: DeviceMonitor.cpp  DeviceMonitor.h  InfoCollector.cpp  MQTTAsyncClient.cpp  config.h  config.h.in  main.cpp
src/Module/Database/: CMakeLists.txt  Database.cpp  Database.h
src/Module/Database/mysql/: mariadb_version-x86_64.h  mariadb_version.h  mysql_version.h
src/Module/Database/mysql/server/: my_config-x86_64.h  my_config.h  mysql_version.h
src/Module/Database/mysql/server/private/: source_revision.h
src/Module/InfoCollector/: CMakeLists.txt  InfoCollector.cpp  InfoCollector.h
src/Module/Network/: CMakeLists.txt  Network.cpp  Network.h
src/Module/Network/MQTT/: CMakeLists.txt  MQTTAsyncClient.cpp  MQTTAsyncClient.h
src/Module/Utils/: CMakeLists.txt  MyModule.cpp  MyModule.h  TimedTask.cpp  TimedTask.h  Utils.cpp  Utils.h
src/Module/Utils/INI/: CMakeLists.txt
